2006-03-24  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-key-properties.c: Fix gtk_tree_store warning.  
    Must end list of args with -1.

2006-03-22  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-ldap-source.c:
    * libseahorse/seahorse-operation.c:
    * libseahorse/seahorse-operation.h:
    * libseahorse/seahorse-pgp-source.c:
    * libseahorse/seahorse-progress.c:
    * libseahorse/seahorse-ssh-operation.c: Clarify and cleanup 
    the operation code a bit. 
    
2006-03-22  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/Makefile.am:
    * libseahorse/seahorse-operation.c:
    * libseahorse/seahorse-progress.c:
    * libseahorse/seahorse-progress.glade:
    * libseahorse/seahorse-ssh-key.c:
    * libseahorse/seahorse-ssh-key.h:
    * libseahorse/seahorse-ssh-operation.c (added):
    * libseahorse/seahorse-ssh-operation.h (added):
    * libseahorse/seahorse-ssh-source.c:
    * libseahorse/seahorse-ssh-source.h:
    * src/seahorse-generate-select.c:
    * src/seahorse-generate-select.glade:
    * src/seahorse-key-dialogs.h:
    * src/seahorse-key-manager.c:
    * src/seahorse-ssh-generate.c (added):
    * src/seahorse-ssh-generate.glade (added):
    * src/seahorse-ssh-key-properties.c:
    * src/seahorse-ssh-upload.c: Add support for SSH key generation
    
2006-03-22  Nate Nielsen  <nielsen@memberwebs.com>

    * seahorse-key-manager.c: Make sure 'First Time Options' 
    doesn't show itself needlessly
    
2006-03-22  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-pgp-key.c:
    * libseahorse/seahorse-pgp-key.h:
    * libseahorse/seahorse-widget.c:
    * libseahorse/seahorse-widget.h:
    * src/Makefile.am:
    * src/seahorse-key-properties.c:
    * src/seahorse-key-properties.glade (removed):
    * src/seahorse-pgp-private-key-properties.glade (added): Rework the 
    private key dialog. Fixes bug# 335414
    