@@ -79,6 +79,7 @@ src/seahorse-pgp-keys.desktop.in
 src/seahorse-pgp-private-key-properties.glade
 src/seahorse-pgp-public-key-properties.glade
 src/seahorse-pgp-signature.desktop.in
+src/seahorse-photos.c
 src/seahorse-preferences.c
 src/seahorse-preferences.glade
 src/seahorse-process-multiple.c
