@@ -1,3 +1,7 @@
+2006-03-25  Nate Nielsen  <nielsen@memberwebs.com>
+
+	POTFILES.in Added src/seahorse-photos.c
+
 2006-03-22  Nate Nielsen  <nielsen@memberwebs.com>
 
 	POTFILES.in Added/Removed private key glade files
