@@ -1,3 +1,14 @@
+2006-03-25  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * libseahorse/seahorse-pgp-key-op.c:
+    * libseahorse/seahorse-util.c:
+    * libseahorse/seahorse-util.h:
+    * src/Makefile.am:
+    * src/seahorse-key-dialogs.h:
+    * src/seahorse-key-properties.c:
+    * src/seahorse-photos.c (added): Automatically resize the photos
+    that are too large, automatically convert to JPEG. Fixes bug #335405
+    
 2006-03-24  Adam Schreiber  <sadam@clemson.edu>
 
     * src/seahorse-key-properties.c: Fix gtk_tree_store warning.  
